trying to fix a white margin to the right on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,10 +48,14 @@ table {
 }
 
 */
-html {
-  position: relative;
-}
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
 
 
 * {
